# ARS

./: Makefile  README.md  pyproject.toml  requirements.txt
ARS/: __init__.py  audio_capture.py  config.py  debug.py  demo.py  diagnostic.py  main.py  main2.py  noise_detection.py  openwakeword1.py  openwakeword2.py  picovoice_detection.py  pii.py  piiip.py  vad.py  vosk_detection.py  wake_word.py  whisper_detection.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: mr-pink.ppn  silero_vad.pth  silero_vad_complete.pth
