[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ARS"
version = "0.0.1"
description = "Audio-Based Recognition System for"
authors = [
  { name = "Djames Eddine" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=Critical Command"


[tool.ruff]
line-length = 99
src = ["ARS"]
include = ["pyproject.toml", "ARS/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ARS"]
force-sort-within-sections = true

